[project]
name = "mhkb-jetstream"
version = "0.1.0"
description = "A minimal, stdlib-lean, unified sync+async HTTP client that feels like requests and performs like a modern async library."
readme = "README.md"
authors = [
    { name = "Manoah Bernier", email = "manoah.bernier@pm.me" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
jetstream = "jetstream:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jetstream"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
branch = "main"
tag_format = "v{version}"
upload_to_release = true
upload_to_pypi = false
changelog_file = "CHANGELOG.md"
version_toml = ["pyproject.toml:project.version"]
commit_parser = "angular"
build_command = "uv run python -m build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "ruff>=0.12.12",
]
